WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189278
Cancelled fullscreen exit gesture leaves bad state for next exit request.
https://bugs.webkit.org/show_bug.cgi?id=189278
Summary
Cancelled fullscreen exit gesture leaves bad state for next exit request.
Jeremy Jones
Reported
2018-09-04 15:53:12 PDT
Cancelled fullscreen exit gesture leaves bad state for next exit request.
Attachments
Patch
(1.78 KB, patch)
2018-09-04 15:57 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2018-09-04 15:57:48 PDT
Created
attachment 348861
[details]
Patch
Jeremy Jones
Comment 2
2018-09-04 15:59:33 PDT
rdar://problem/42780382
WebKit Commit Bot
Comment 3
2018-09-05 10:11:33 PDT
Comment on
attachment 348861
[details]
Patch Clearing flags on attachment: 348861 Committed
r235674
: <
https://trac.webkit.org/changeset/235674
>
WebKit Commit Bot
Comment 4
2018-09-05 10:11:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug